[package]
name = "Example"
version = "0.1.0"
authors = ["nah <hbow1001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.2"
actix-web = { version = "1.0", features = ["ssl"] }
openssl = { version = "0.10.26", features = ["v110"] }
actix-files = "0.1.7"
futures = "0.3.0"
actix-http = "1.0.0"
awc = "1.0.1"